--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <style> body {padding: 0; margin: 0; overflow: hidden} </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
-    <script src="sketch.js"></script>
+    <script src="sketch.js" charset="utf-8"></script>
+    <script src="bdd.js" charset="utf-8"></script>
   </head>
   <body>
   </body>
